-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.1.0
-
QtCreator 4.1.0-4 amd64
Linux <censored> 4.8.0-1-amd64 #1 SMP Debian 4.8.7-1 (2016-11-13) x86_64 GNU/Linux) having continual upgrade history since Woody was the testing one...
When I choose New source file->C++ class, I am unable to check checkbox "Include QObject" (and any other in this form) even when I select QObject (QWidget etc. as appropriate) as the base class. By "unable" I mean, that if I do click that checkbox, very shortly some mark (too fast to be sure whether cross or check mark) appears in the box and disappears again in instant.
I expected this to be wip, and quietly waited for some upgrade, which will fix this. It can be workarounded quite easily if one just do not forget to add respective #include manually...
However today I moved forward towards creation of own JSON wizard based on that C++ class wizard copy. It behaves exactly the same and I have found, that in the official examples of JSON based wizards there is cited exactly this C++ class wizard, even more this "Include QObject" checkbox, as if it should be working normally.
I tried to verify and get help in the Qt forum and was recommended to fill bug or mail developers. Having no link to developer maillist I do fill this bug,which is probably only some interference with my installation. Please, before eventual closing as unconfirmed, attach some instructions where should I continue my search for debugging help.
For Gerrit Dashboard: QTCREATORBUG-17503 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
194260,3 | Wizards: Fix wizards in KDE environments | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |